<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:title="action_notification"
        app:showAsAction="always">
        <menu>


            <item
                android:id="@+id/action_update"
                android:orderInCategory="100"
                android:title="@string/sync_data"
                android:icon="@drawable/ic_sync_black_24dp"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_report"
                android:orderInCategory="100"
                android:title="@string/report"
                android:icon="@drawable/ic_file"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_logout"
                android:orderInCategory="100"
                android:title="@string/logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>